@@ -1,5 +1,5 @@
 /* Thread pool for L4 threads.
-   Copyright (C) 2004 Free Software Foundation, Inc.
+   Copyright (C) 2004, 2007 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -22,11 +22,11 @@
 
 static pthread_mutex_t pool_lock = PTHREAD_MUTEX_INITIALIZER;
 
-l4_thread_id_t pool_list = l4_nilthread;
+_L4_thread_id_t pool_list = l4_nilthread;
 
 /* Add the thread TID to the pthread kernel thread pool.  */
 int
-pthread_pool_add_np (l4_thread_id_t tid)
+pthread_pool_add_np (_L4_thread_id_t tid)
 {
   __pthread_mutex_lock (&pool_lock);
   /* FIXME: Do error checking.  */
@@ -38,10 +38,10 @@ pthread_pool_add_np (l4_thread_id_t tid)
 
 
 /* Get the first thread from the pool.  */
-l4_thread_id_t
+_L4_thread_id_t
 pthread_pool_get_np (void)
 {
-  l4_thread_id_t tid;
+  _L4_thread_id_t tid;
 
   __pthread_mutex_lock (&pool_lock);
   /* FIXME: Do error checking.  */
